Colab을 통해 생성됨

--- a/4_2_ForStatement.ipynb
+++ b/4_2_ForStatement.ipynb
@@ -47,43 +47,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "numbers = (1,2,3,4,5,6,7,8,9)\n",
-        "\n",
-        "print(numbers)\n",
-        "\n",
-        "for i in numbers:\n",
-        "  print(i)"
-      ],
-      "metadata": {
-        "id": "YIbq72I7B7DF",
-        "outputId": "4405b872-3e12-46ed-acfc-6506cb4d5dd7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(1, 2, 3, 4, 5, 6, 7, 8, 9)\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "j0T81ZhAm6vm",
@@ -114,36 +77,6 @@
         "\n",
         "for i in numbers: # 'i' represents for integers. # The for loop iterates through each element (i) in the numbers tuple.\n",
         "  print(i) # Inside the loop, the print(i) statement prints each individual integer from the numbers tuple on separate lines."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "scope = [1,2,3,4,5]\n",
-        "\n",
-        "for i in scope:\n",
-        "  print(i)"
-      ],
-      "metadata": {
-        "id": "af4PPqGBDaDm",
-        "outputId": "1f5a874f-989f-41ac-ebd2-a98f0752bc2c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n"
-          ]
-        }
       ]
     },
     {
@@ -224,67 +157,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import keyword\n",
-        "keyword.kwlist"
-      ],
-      "metadata": {
-        "id": "sAgI6ZolE-nt",
-        "outputId": "82dcd9fb-3343-4790-aead-933115d3e3af",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['False',\n",
-              " 'None',\n",
-              " 'True',\n",
-              " 'and',\n",
-              " 'as',\n",
-              " 'assert',\n",
-              " 'async',\n",
-              " 'await',\n",
-              " 'break',\n",
-              " 'class',\n",
-              " 'continue',\n",
-              " 'def',\n",
-              " 'del',\n",
-              " 'elif',\n",
-              " 'else',\n",
-              " 'except',\n",
-              " 'finally',\n",
-              " 'for',\n",
-              " 'from',\n",
-              " 'global',\n",
-              " 'if',\n",
-              " 'import',\n",
-              " 'in',\n",
-              " 'is',\n",
-              " 'lambda',\n",
-              " 'nonlocal',\n",
-              " 'not',\n",
-              " 'or',\n",
-              " 'pass',\n",
-              " 'raise',\n",
-              " 'return',\n",
-              " 'try',\n",
-              " 'while',\n",
-              " 'with',\n",
-              " 'yield']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@markdown <font color='red'>**💡🐹🐾 Be cautious about using words used the list of keywords**\n",
         "\n",
         "import keyword\n",
@@ -342,34 +214,6 @@
           },
           "metadata": {},
           "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "friends = ['수호', '윤지', '유찬']\n",
-        "\n",
-        "for i in friends:\n",
-        "  print(i)"
-      ],
-      "metadata": {
-        "id": "K3KDz0-EFT4d",
-        "outputId": "61332fdf-4288-42ba-c5fd-dfd62457dcb1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "수호\n",
-            "윤지\n",
-            "유찬\n"
-          ]
         }
       ]
     },
@@ -447,39 +291,6 @@
       "metadata": {
         "id": "qkd3saTwMQxP"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for i in range(10):\n",
-        "  print(i)\n"
-      ],
-      "metadata": {
-        "id": "8D2ySrfyG2mc",
-        "outputId": "d9b8c1db-1603-4304-9d7e-c7bec2e4e5be",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -617,19 +428,45 @@
     {
       "cell_type": "code",
       "source": [
+        "for z in range(0):\n",
+        "  print(z)"
+      ],
+      "metadata": {
+        "id": "KUdnZrxsqW0d"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "list_fruit = [\"apple\", \"banana\", \"grape\", \"strawberry\", \"pear\", \"mango\"]\n",
         "\n",
         "for i in list_fruit:\n",
         "  print(i)"
       ],
       "metadata": {
-        "id": "n-UaDN7R3aCF",
-        "outputId": "59be757e-8dd9-4a02-d132-ac456378b0e9",
+        "id": "SaUuYRpWqkKJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_fruit = [\"apple\", \"banana\", \"grape\", \"strawberry\", \"pear\", \"mango\"]\n",
+        "\n",
+        "for i in list_fruit:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "HSb9AbFirUfs",
+        "outputId": "2d335b3d-103a-4c30-cc6d-7ac12c224635",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -678,6 +515,36 @@
     {
       "cell_type": "code",
       "source": [
+        "string = 'abcde'\n",
+        "\n",
+        "for i in string:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "t__nKio9rLrl",
+        "outputId": "576a4dc4-9ba7-465d-8c33-98319a7693fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n",
+            "d\n",
+            "e\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "list_int = [1,2,3,4,5]\n",
         "\n",
         "for c in list_int:\n",
@@ -691,6 +558,43 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "1\n",
+            "[0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_int = [1,2,3,4,5]\n",
+        "\n",
+        "for i in list_int:\n",
+        "  print(i)\n",
+        "\n",
+        "\n",
+        "print(list_int[0])\n",
+        "\n",
+        "print([0])"
+      ],
+      "metadata": {
+        "id": "55bK4TrHr0vG",
+        "outputId": "c24cb61e-6be0-4069-e046-6b6f69cb430a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -764,6 +668,34 @@
     {
       "cell_type": "code",
       "source": [
+        "dict1 = {'a':97, 'b':98, 'c':99}\n",
+        "\n",
+        "for i in dict1:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "pssx9seWtMIs",
+        "outputId": "83e2ba58-1da4-444d-dde4-dbf3a84d29e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "dict2 = {'a':100, 'b':200, 'c':300}\n",
         "\n",
         "for i in dict2:\n",
@@ -792,6 +724,43 @@
     {
       "cell_type": "code",
       "source": [
+        "dict2 = {'a':100, 'b':200, 'c':300}\n",
+        "\n",
+        "for i in dict2:\n",
+        "  print(i)\n",
+        "\n",
+        "print(dict2['a'])\n",
+        "\n",
+        "print(dict2['b'])\n",
+        "\n",
+        "print(dict2['c'])"
+      ],
+      "metadata": {
+        "id": "y20xHfWitris",
+        "outputId": "74fbdd3f-dc1f-4386-b1ca-d43b79661602",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n",
+            "100\n",
+            "200\n",
+            "300\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 💊 **Compare between print(dictionary['a']) & print(['a']) to print a value, not a key.**\n",
         "\n",
         "print(dict2['a'])\n",
@@ -805,6 +774,31 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n",
+            "['a']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(dict2['a'])\n",
+        "print(['a'])"
+      ],
+      "metadata": {
+        "id": "f1zm5aINu3Or",
+        "outputId": "6864143a-1d51-4046-ba39-5a565c140cb0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -880,6 +874,130 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "for i in range(100):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "RNTGwW7IvZC6",
+        "outputId": "5a9a14dc-9cf1-49ab-f21d-75f355d2e0a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n",
+            "20\n",
+            "21\n",
+            "22\n",
+            "23\n",
+            "24\n",
+            "25\n",
+            "26\n",
+            "27\n",
+            "28\n",
+            "29\n",
+            "30\n",
+            "31\n",
+            "32\n",
+            "33\n",
+            "34\n",
+            "35\n",
+            "36\n",
+            "37\n",
+            "38\n",
+            "39\n",
+            "40\n",
+            "41\n",
+            "42\n",
+            "43\n",
+            "44\n",
+            "45\n",
+            "46\n",
+            "47\n",
+            "48\n",
+            "49\n",
+            "50\n",
+            "51\n",
+            "52\n",
+            "53\n",
+            "54\n",
+            "55\n",
+            "56\n",
+            "57\n",
+            "58\n",
+            "59\n",
+            "60\n",
+            "61\n",
+            "62\n",
+            "63\n",
+            "64\n",
+            "65\n",
+            "66\n",
+            "67\n",
+            "68\n",
+            "69\n",
+            "70\n",
+            "71\n",
+            "72\n",
+            "73\n",
+            "74\n",
+            "75\n",
+            "76\n",
+            "77\n",
+            "78\n",
+            "79\n",
+            "80\n",
+            "81\n",
+            "82\n",
+            "83\n",
+            "84\n",
+            "85\n",
+            "86\n",
+            "87\n",
+            "88\n",
+            "89\n",
+            "90\n",
+            "91\n",
+            "92\n",
+            "93\n",
+            "94\n",
+            "95\n",
+            "96\n",
+            "97\n",
+            "98\n",
+            "99\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# 🅱️  FOR ~: IF ~: CONTINUE... ELSE: BREAK\n",
@@ -927,6 +1045,39 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "scope = [1,2,3,4,5]\n",
+        "\n",
+        "for i in scope:\n",
+        "  print(i)\n",
+        "\n",
+        "  if i<3:\n",
+        "    continue\n",
+        "  else:\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "KkYLap80wyJ8",
+        "outputId": "c5b321c4-e16f-413a-eb28-f30b445a9f31",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#🅾️ FOR ~: ELSE ~:\n",
@@ -960,6 +1111,39 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "Perfect\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scope = [1,2,3,4,5]\n",
+        "\n",
+        "for i in scope:\n",
+        "  print(i)\n",
+        "else:\n",
+        "  print('Perfect')"
+      ],
+      "metadata": {
+        "id": "gVTglWMtyHDb",
+        "outputId": "43925407-13ed-4322-82b3-82cdf2f3e8bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
