Colab을 통해 생성됨

--- a/4_3_tryExceptElse_Statement.ipynb
+++ b/4_3_tryExceptElse_Statement.ipynb
@@ -84,11 +84,11 @@
         "print('How are you?')"
       ],
       "metadata": {
-        "id": "YmjbHsIp0sRR",
-        "outputId": "152957ab-2de8-4431-f9d4-9864b57756f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YmjbHsIp0sRR",
+        "outputId": "152957ab-2de8-4431-f9d4-9864b57756f5"
       },
       "execution_count": 9,
       "outputs": [
@@ -112,11 +112,11 @@
         "  print('Exception occurred')"
       ],
       "metadata": {
-        "id": "KDDet7BBzpUR",
-        "outputId": "a99eaa08-3713-40a5-fd8b-03e6f68f53f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KDDet7BBzpUR",
+        "outputId": "a99eaa08-3713-40a5-fd8b-03e6f68f53f7"
       },
       "execution_count": 13,
       "outputs": [
@@ -192,6 +192,38 @@
           "text": [
             "How are you?\n",
             "Exception occurred.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  print('How are you?')\n",
+        "  #print(param)\n",
+        "\n",
+        "except:\n",
+        "  print('Exception occurred')\n",
+        "\n",
+        "else:\n",
+        "  print('Exception did not occur.')"
+      ],
+      "metadata": {
+        "id": "yUBYFzHc2qI6",
+        "outputId": "4df9d618-a617-4472-d896-6043dacf0648",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
+            "Exception did not occur.\n"
           ]
         }
       ]
