Colab을 통해 생성됨

--- a/4_3_tryExceptElse_Statement.ipynb
+++ b/4_3_tryExceptElse_Statement.ipynb
@@ -81,57 +81,6 @@
     {
       "cell_type": "code",
       "source": [
-        "print('How are you?')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YmjbHsIp0sRR",
-        "outputId": "152957ab-2de8-4431-f9d4-9864b57756f5"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "How are you?\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "try:\n",
-        "  print('How are you?')\n",
-        "  #print(param)\n",
-        "\n",
-        "except:\n",
-        "  print('Exception occurred')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KDDet7BBzpUR",
-        "outputId": "a99eaa08-3713-40a5-fd8b-03e6f68f53f7"
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "How are you?\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# 위 2️⃣ 의 예시 (try: ~ except)\n",
         "\n",
         "try:\n",
@@ -144,12 +93,12 @@
       ],
       "metadata": {
         "id": "KNr3PPDkPVtK",
-        "outputId": "a11b08af-08b8-4007-d539-d9cc13fdcdad",
+        "outputId": "04dcf89b-c18e-436e-c297-ea134b62df33",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,9 +131,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yI5O0MpmuDHE",
-        "outputId": "863e4909-5f72-4a2c-bda7-d61ce66b13c8"
+        "outputId": "a67b2343-a1db-4af6-cb90-6057cda6a2f0"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,38 +141,6 @@
           "text": [
             "How are you?\n",
             "Exception occurred.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "try:\n",
-        "  print('How are you?')\n",
-        "  #print(param)\n",
-        "\n",
-        "except:\n",
-        "  print('Exception occurred')\n",
-        "\n",
-        "else:\n",
-        "  print('Exception did not occur.')"
-      ],
-      "metadata": {
-        "id": "yUBYFzHc2qI6",
-        "outputId": "4df9d618-a617-4472-d896-6043dacf0648",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "How are you?\n",
-            "Exception did not occur.\n"
           ]
         }
       ]
@@ -294,6 +211,38 @@
           "text": [
             "How are you?\n",
             "Exception occurred.\n",
+            "This code should be running.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  print ('How are you?')\n",
+        "  #print (param)\n",
+        "\n",
+        "except:\n",
+        "  print ('Exception occurred.')\n",
+        "\n",
+        "finally:\n",
+        "  print ('This code should be running.')"
+      ],
+      "metadata": {
+        "id": "PYi2kPmJx0BY",
+        "outputId": "1c331062-c004-471e-ddc5-9f0a920eeed6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
             "This code should be running.\n"
           ]
         }
