Colab을 통해 생성됨

--- a/5_regularexpression.ipynb
+++ b/5_regularexpression.ipynb
@@ -100,9 +100,8 @@
         "|? | 앞의 문자가 존재할 수도 있고, 존재하지 않을 수도 있음 (문자가 0개 또는 1개)|\n",
         "|* | 앞의 문자가 무한개로 존재할 수도 있고, 존재하지 않을 수도 있음 (문자가 0개 이상)|\n",
         "|+ | 앞의 문자가 최소 한 개 이상 존재 (문자가 1개 이상)|\n",
-        "|^ | 뒤의 문자열로 문자열이 시작|\n",
         "|$ | 앞의 문자열로 문자열이 끝남|\n",
-        "\n",
+        "|^ | 뒤의 문자열로 문자열이 시작|\n",
         "\n"
       ],
       "metadata": {
@@ -129,6 +128,51 @@
       "metadata": {
         "id": "N-_A8t716QpE"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"cat, hat, bat, sat, mat, combat, unbated .at\"\n",
+        "\n",
+        "pattern = r\".at\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "print(matches)\n",
+        "print('\\n')\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sxVsan4yHy0J",
+        "outputId": "3828e086-5261-405f-e938-ba393aa3212c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['cat', 'hat', 'bat', 'sat', 'mat', 'bat', 'bat', '.at']\n",
+            "\n",
+            "\n",
+            "Match: cat\n",
+            "Match: hat\n",
+            "Match: bat\n",
+            "Match: sat\n",
+            "Match: mat\n",
+            "Match: bat\n",
+            "Match: bat\n",
+            "Match: .at\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -269,6 +313,46 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"color or colour?\"\n",
+        "\n",
+        "pattern = r\"colou?r\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "print(matches)\n",
+        "\n",
+        "print('\\n')\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uqCspJg7MzFO",
+        "outputId": "77427caa-e88a-4bc7-fe09-ec98352aa76c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['color', 'colour']\n",
+            "\n",
+            "\n",
+            "Match: color\n",
+            "Match: colour\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#2. mata character Question mark ? (뜻: ?는 ?의 앞에 나오는 문자/요소가 0번 혹은 1번 나타날 수 있음) 예시\n",
         "\n",
         "import re\n",
@@ -334,6 +418,42 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"ab, ac, abc, abbc, aabbc, abbbbbbbbbbbbbbc, abkc\"\n",
+        "\n",
+        "pattern = r\"ab*c\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"결과값:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "REPeAyUQNt_w",
+        "outputId": "b6720fd5-648d-42db-ad7a-08c598a3362c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "결과값: ac\n",
+            "결과값: abc\n",
+            "결과값: abbc\n",
+            "결과값: abbc\n",
+            "결과값: abbbbbbbbbbbbbbc\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#3. mata character Asterisk * (뜻: *는 *의 앞의 문자/요소가 0회 이상 나타날 수 있음) 예시\n",
         "\n",
         "import re\n",
@@ -364,6 +484,40 @@
             "Match: abbc\n",
             "Match: abbc\n",
             "Match: abbbbbbbbbbbbbbc\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"cat, caat, caaat, caot, sat, set\"\n",
+        "\n",
+        "pattern = r\"ca+t\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pm6-yR_ZO777",
+        "outputId": "08cc412a-189f-4624-b11b-168166958916"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: cat\n",
+            "Match: caat\n",
+            "Match: caaat\n"
           ]
         }
       ]
@@ -415,6 +569,41 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"cat, caat, caaat, sat, set\"\n",
+        "\n",
+        "pattern = r\"a+t\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Uva65tiyPqT9",
+        "outputId": "f5847ceb-7172-404d-ff28-972c81077221"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: at\n",
+            "Match: aat\n",
+            "Match: aaat\n",
+            "Match: at\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#4a 💣💊COMPARE\n",
         "\n",
         "import re\n",
@@ -451,11 +640,43 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a popular programming language. Python is versatile.\"\n",
+        "\n",
+        "pattern = r'versatile.$'\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "go2sbVTeQmbO",
+        "outputId": "db6902c4-3e0b-43d1-872c-d49e3f433212"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: versatile.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#5. mata character $ (뜻: $는 문자열의 끝을 나타내는 메타 문자, 즉 해당 패턴이 문자열의 끝 부분과 일치해야 함) 예시\n",
         "\n",
         "import re\n",
         "\n",
-        "text = \"Python is a popular programming language. Python is versatile.\"\n",
+        "text = \"Python is a popular programming language. Is Python versatile.\"\n",
         "pattern = r'versatile.$'\n",
         "\n",
         "matches = re.findall(pattern, text)\n",
@@ -468,7 +689,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pB4b3UZlxgKJ",
-        "outputId": "2ce80aae-12d3-486a-ffb3-2a257bacc20d"
+        "outputId": "52bf37a3-c863-4ee2-c957-d1ba07b6bc82"
       },
       "execution_count": null,
       "outputs": [
@@ -489,6 +710,38 @@
       "metadata": {
         "id": "zC1fXyd-L7pB"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a popular programming language. Python is versatile.\"\n",
+        "\n",
+        "pattern = r'e.$'\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bzaSpRlzRzfI",
+        "outputId": "87d116e1-8d86-4901-c202-f229f67a64ee"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: e.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -559,6 +812,26 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a popular programming language. Python is versatile.\"\n",
+        "\n",
+        "pattern = r'language.$'\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "6QWdQT1ZSXnY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#5c. 💣💊COMPARE\n",
         "\n",
         "import re\n",
@@ -578,6 +851,38 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a programming language. Python is versatile. We all love Python.\"\n",
+        "\n",
+        "pattern = r'^Python'\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VFKRZzISSzvi",
+        "outputId": "379c7478-b4fd-4001-edcb-190e8abe5589"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: Python\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -619,6 +924,26 @@
       "metadata": {
         "id": "R12WoavvOT9h"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a programming language. Python is versatile. We all love Python.\"\n",
+        "\n",
+        "pattern = r'^is'\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "VWDQF2yhTer9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
