--- a/5_regularexpression.ipynb
+++ b/5_regularexpression.ipynb
@@ -1004,6 +1004,40 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"123 4567 89 12345\"\n",
+        "\n",
+        "pattern = r\"\\d{3}\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cswu92GS2T9w",
+        "outputId": "82c81a2d-cd3b-4347-e584-dd70bf24cc22"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 123\n",
+            "Match: 456\n",
+            "Match: 123\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#7. {숫자} (뜻: {}를 사용하여 숫자를 지정하는 것은 정규 표현식에서 특정 패턴이 몇 번 나타날지 지정하는 방법 중 하나) 예시\n",
         "# ⭐ IMPORTANT: \"\\d\"는 숫자를 나타냄 (REFER to More on re #21부터)\n",
         "\n",
@@ -1022,7 +1056,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vr5AK9reRFxX",
-        "outputId": "059e044c-98aa-4780-b9c2-d4c4075504a4"
+        "outputId": "49e0f3ca-61bd-483c-80bd-c2d386b9210b"
       },
       "execution_count": null,
       "outputs": [
@@ -1033,6 +1067,42 @@
             "Match: 123\n",
             "Match: 456\n",
             "Match: 123\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"The numbers are 12345678999, 12345, 987, and 56789.\"\n",
+        "\n",
+        "pattern = r\"\\d{3,5}\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PepToCGl212P",
+        "outputId": "1c624ed5-db1f-4489-ce1a-637abd117b5a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 12345\n",
+            "Match: 67899\n",
+            "Match: 12345\n",
+            "Match: 987\n",
+            "Match: 56789\n"
           ]
         }
       ]
@@ -1078,6 +1148,38 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"The word 'hello' is repeated many times: hello hello hello hello hello.\"\n",
+        "\n",
+        "pattern = r\"(hello ){2,}\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iG-hBkOV39iQ",
+        "outputId": "63374ecf-7493-483e-fd7c-b10eaf1d24d5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: hello \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#9. {숫자, } (뜻: {숫자,} 구문을 사용하면 최소한 숫자 번 이상 나타나는 패턴을 검색할 수 있음) 예시\n",
         "# Be aware of white spaces.\n",
         "\n",
@@ -1105,6 +1207,40 @@
           "name": "stdout",
           "text": [
             "Match: hello \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"The word 'hello' is repeated many times: hellohellohellohellohello hellohellohellohellohello hellohellohellohellohello\"\n",
+        "\n",
+        "pattern = r\"(hello){2,}\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NdsajU_k5FBQ",
+        "outputId": "df02f0bf-50e3-490f-ee6f-7dca63767829"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: hello\n",
+            "Match: hello\n",
+            "Match: hello\n"
           ]
         }
       ]
@@ -1147,6 +1283,38 @@
     {
       "cell_type": "code",
       "source": [
+        "text = \"The price is $100.\"\n",
+        "\n",
+        "pattern = r\"[1234567890]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nYz0KILt5bgY",
+        "outputId": "52adc704-7520-4536-f990-b1e6a7d9fdb7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 1\n",
+            "Match: 0\n",
+            "Match: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 10. [ ]  (뜻: [ ]는 [ ]대괄호 안의 요소들 중 한 개의 요소와 일치)\n",
         "\n",
         "text = \"The price is $100.\"\n",
@@ -1165,6 +1333,38 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 1\n",
+            "Match: 0\n",
+            "Match: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = \"The price is $100.\"\n",
+        "\n",
+        "pattern = r\"[\\d]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MO7FQvO76hg-",
+        "outputId": "e60f8056-1b4a-4338-a706-98b6b03613b6"
       },
       "execution_count": null,
       "outputs": [
@@ -1217,6 +1417,38 @@
     {
       "cell_type": "code",
       "source": [
+        "text = \"The price is $100.\"\n",
+        "\n",
+        "pattern = r\"[es]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P6GYO1MY6mcO",
+        "outputId": "6ff400df-b845-4feb-e801-7941bd119e90"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: e\n",
+            "Match: e\n",
+            "Match: s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 10b. 💊COMPARE\n",
         "\n",
         "text = \"The price is $100.\"\n",
@@ -1245,6 +1477,40 @@
             "Match: e\n",
             "Match: e\n",
             "Match: s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = \"The price is $100.\"\n",
+        "\n",
+        "pattern = r\"[etz\\d]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wxC2vz747ZqB",
+        "outputId": "edaf5121-5116-420c-d740-80c2d4984d88"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: e\n",
+            "Match: e\n",
+            "Match: 1\n",
+            "Match: 0\n",
+            "Match: 0\n"
           ]
         }
       ]
@@ -1282,6 +1548,45 @@
             "Match: 1\n",
             "Match: 0\n",
             "Match: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"I have an apple and a monkey in the kitchen.\"\n",
+        "\n",
+        "pattern = r\"[amk]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R04n1lQD7pdw",
+        "outputId": "5c9c6c58-74df-4b11-9758-84464aae6ed8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: a\n",
+            "Match: a\n",
+            "Match: a\n",
+            "Match: a\n",
+            "Match: a\n",
+            "Match: m\n",
+            "Match: k\n",
+            "Match: k\n"
           ]
         }
       ]
@@ -1421,6 +1726,55 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"The price is $100.\"\n",
+        "\n",
+        "pattern1 = r\"\\d\"\n",
+        "pattern2 = r\"es\"\n",
+        "\n",
+        "print(pattern1)\n",
+        "print('\\n')\n",
+        "print(pattern2)\n",
+        "print('\\n')\n",
+        "\n",
+        "matches1 = re.findall(pattern1, text)\n",
+        "for i in matches1:\n",
+        "  print(\"Match1:\", i)\n",
+        "\n",
+        "matches2 = re.findall(pattern2, text)\n",
+        "for i in matches2:\n",
+        "  print(\"Match1:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S48IwpkA-IMj",
+        "outputId": "d24d3174-764e-413b-a36e-f9a7077bf4fe"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\\d\n",
+            "\n",
+            "\n",
+            "es\n",
+            "\n",
+            "\n",
+            "Match1: 1\n",
+            "Match1: 0\n",
+            "Match1: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#10f. 🌀💊 Comprehensive understanding of [ ] when it comes with digits and spelling strings.\n",
         "\n",
         "# (a) \\d (i.e., {0,9}, 0123456789) does not necessarily need [ ] if it comes with for statement, but you don't need nothing to lose by using [\\d].\n",
@@ -1469,6 +1823,71 @@
             "Match1: 1\n",
             "Match1: 0\n",
             "Match1: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"The quick brown fox jumps over the lazy dog.\"\n",
+        "\n",
+        "pattern = r\"[a-z]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "atW9ad-vA2Gy",
+        "outputId": "649628df-2555-45af-ceeb-d17d030c5437"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: h\n",
+            "Match: e\n",
+            "Match: q\n",
+            "Match: u\n",
+            "Match: i\n",
+            "Match: c\n",
+            "Match: k\n",
+            "Match: b\n",
+            "Match: r\n",
+            "Match: o\n",
+            "Match: w\n",
+            "Match: n\n",
+            "Match: f\n",
+            "Match: o\n",
+            "Match: x\n",
+            "Match: j\n",
+            "Match: u\n",
+            "Match: m\n",
+            "Match: p\n",
+            "Match: s\n",
+            "Match: o\n",
+            "Match: v\n",
+            "Match: e\n",
+            "Match: r\n",
+            "Match: t\n",
+            "Match: h\n",
+            "Match: e\n",
+            "Match: l\n",
+            "Match: a\n",
+            "Match: z\n",
+            "Match: y\n",
+            "Match: d\n",
+            "Match: o\n",
+            "Match: g\n"
           ]
         }
       ]
@@ -1542,6 +1961,46 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"\\\"The book titles are 'The Aesop for Children', 'Harry Potter', and 'Pride and Prejudice',\\\" said Amelia.\"\n",
+        "\n",
+        "pattern = r\"[A-Z]\"\n",
+        "\n",
+        "matches =  re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XXonv015BU2v",
+        "outputId": "ba958896-f9bb-4f7c-aa15-b3d1da1bd7a9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: T\n",
+            "Match: T\n",
+            "Match: A\n",
+            "Match: C\n",
+            "Match: H\n",
+            "Match: P\n",
+            "Match: P\n",
+            "Match: P\n",
+            "Match: A\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#12. [A-Z] ('a'부터 'z'까지의 모든 대문자 글자와 일치) 예시\n",
         "\n",
         "import re\n",
@@ -1576,6 +2035,60 @@
             "Match: P\n",
             "Match: P\n",
             "Match: A\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"New York is a wonderful city.\"\n",
+        "\n",
+        "pattern = r\"[a-zA-Z]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UzSlEyKaDxVS",
+        "outputId": "05910d71-61b6-4962-bf4b-e9bb6b49d00d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: N\n",
+            "Match: e\n",
+            "Match: w\n",
+            "Match: Y\n",
+            "Match: o\n",
+            "Match: r\n",
+            "Match: k\n",
+            "Match: i\n",
+            "Match: s\n",
+            "Match: a\n",
+            "Match: w\n",
+            "Match: o\n",
+            "Match: n\n",
+            "Match: d\n",
+            "Match: e\n",
+            "Match: r\n",
+            "Match: f\n",
+            "Match: u\n",
+            "Match: l\n",
+            "Match: c\n",
+            "Match: i\n",
+            "Match: t\n",
+            "Match: y\n"
           ]
         }
       ]
